Remove active tab

--- a/src/start.html
+++ b/src/start.html
@@ -19,13 +19,13 @@
 <body>
     <nav class="desktop">
         <ul>
-            <li><a href="#" class="active" id="tab-home">Home</a></li>
+            <li><a href="#" id="tab-home">Home</a></li>
             <li><a href="#" id="tab-menu">Menu</a></li>
             <li><a href="#" id="tab-contact">Contact</a></li>
         </ul>
     </nav>
-    <main id="content" class="menu">
-
+    <main id="content">
+        
     </main>
     
     <footer>
